--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "checks": "^1.2.0",
+    "leaflet": "^1.7.1",
+    "next-transpile-modules": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-leaflet": "^3.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -31,19 +34,13 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
+    "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.1.8"
   }
 }
