--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
     "checks": "^1.2.0",
     "leaflet": "^1.7.1",
     "next-transpile-modules": "^8.0.0",
