--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-transpile-modules": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.0",
     "react-router-dom": "^5.2.0",
