Passando variável de ambiente

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
 base = "."
 command = "npm run build"
 publish = "./build/"
+
+[build.environment]
+REACT_APP_API_URL = "http://meu-endereco-producao.com.br/api"
